fix date picker Select alignment (#3392)

--- a/superset/assets/javascripts/explore/main.css
+++ b/superset/assets/javascripts/explore/main.css
@@ -91,3 +91,12 @@
   display: inline-block;
   padding-right: 3px;
 }
+.input-inline .Select-control {
+  display: flex;
+}
+.input-inline .Select-control .Select-arrow-zone {
+  width: auto;
+  position: absolute;
+  right: 0;
+  top: 12px;
+}
